docs: rewrite README with full architecture, dependencies, and sequence
Covers:
- webrtcbin pipeline diagram and step-by-step signalling sequence
- All OS/GStreamer prerequisites with notes on easy-to-miss packages
  (gstreamer1.0-nice, libxtst6/libxrender1/libxi6 for Docker+Swing)
- X11 forwarding setup for Docker
- Maven dependency table
- Build / Docker image build workflow
- Why webrtcbin replaces manual ICE/DTLS/SDP
- GLib main loop requirement
- Critical state-ordering gotcha (READY before set-remote-description)
- Debug bridge endpoint table

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>